--- a/backends/kotlin.html
+++ b/backends/kotlin.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Making Custom Functions - The Diplomat Book</title>
+        <title>Kotlin - The Diplomat Book</title>
 
 
         <!-- Custom HTML head -->
@@ -166,77 +166,72 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="making-custom-functions"><a class="header" href="#making-custom-functions">Making Custom Functions</a></h1>
-<h2 id="what-is-a-custom-function"><a class="header" href="#what-is-a-custom-function">What is a custom function?</a></h2>
-<p>demo_gen tends towards automagical configuration. demo_gen will do its best to take Rust functions and convert them into JS output.</p>
-<p>But there arise situations where we want to create our own custom Javascript functions to demonstrate our library's capabilities to the user, then add them to demo_gen's output. This may be the case if you want to demonstrate functionality that is more involved than demo_gen's automagical work.</p>
-<h3 id="example"><a class="header" href="#example">Example</a></h3>
-<p>Let's look at the <a href="quickstart.html">quickstart</a> repository for an example.</p>
-<p>We only have one function exposed: <code>get_add_str(left : u32, right: u32)</code>.</p>
-<p>What if we have variables <code>a</code>, <code>b</code>, and <code>c</code>, and we want to show the user the results of calling:</p>
-<p><code>get_add_str(a, b)</code> and <code>get_add_str(b, c)</code>?</p>
-<p>We can do this without adding a new binding, through the use of a custom Javascript function.</p>
-<h2 id="diplomatdemocustom_func"><a class="header" href="#diplomatdemocustom_func">#[diplomat::demo(custom_func="...")]</a></h2>
-<p><code>#[diplomat::demo(custom_func="filename.mjs")]</code> can be added above any <code>struct</code> definition. demo_gen will search for files relative to <code>lib.rs</code>, and add the contents of <code>filename.mjs</code> to its output.</p>
-<p>Then demo_gen will import the default export of <code>filename.mjs</code>, and append it to the list of <a href="https://github.com/rust-diplomat/diplomat/blob/main/docs/demo_gen.md#step-two-constructing-renderinfo">RenderInfo</a> termini.</p>
-<h3 id="example-1"><a class="header" href="#example-1">Example</a></h3>
-<p>So, first we create a file called <code>adder_custom.mjs</code> in the same folder as <code>adder_bindings/src/lib.rs</code>:</p>
-<pre><code class="language-js">// adder_bindings/src/adder_custom.mjs
-import { lib } from "./index.mjs";
-export default {
-    "AddThreeVariables": {
-        func: (a, b, c) =&gt; { return lib.AddResult.getAddStr(a, b) + " and " + lib.AddResult.getAddStr(b, c); },
-        funcName: "Add a + b, b + c",
-        parameters: [
-            {
-                name: "a",
-                type: "number"
-            },
-            {
-                name: "b",
-                type: "number"
-            },
-            {
-                name: "c",
-                type: "number"
-            }
-        ]
-    }
-}
+                        <h1 id="kotlin-backend"><a class="header" href="#kotlin-backend">Kotlin Backend</a></h1>
+<p>The kotlin backend uses JNA to wrap the ABI types from diplomat into an ergonomic library for use in the JVM.
+The backend ensures safe sharing and disposal of memory, but it is still experimental so bugs may exist.</p>
+<p>To run the kotlin backend you need to provide some configuration</p>
+<pre><code class="language-sh">diplomat-tool -e {PATH_TO_LIB.RS} -c {CONFIG_FILE} --config {CONFIG_OVERRIDE_1} --config {CONFIG_OVERRIDE_2} kotlin {OUTPUT_PATH}
 </code></pre>
-<p>Then we make sure to link <code>adder_custom.mjs</code> in <code>lib.rs</code>:</p>
-<pre><code class="language-rs">// adder_bindings/src/lib.rs
-#[diplomat::bridge]
-mod ffi {
-    use std::fmt::Write;
-
-	#[diplomat::opaque]
-	#[diplomat::rust_link(basic_adder, Mod)]
-    #[diplomat::demo(custom_func="adder_custom.mjs")]
-	pub struct AddResult;
-
-	impl AddResult {
-		pub fn get_add_str(left : u32, right : u32, write: &amp;mut DiplomatWrite) {
-			write.write_str(&amp;format!("{}", basic_adder::add(left, right))).unwrap();
-			write.flush();
-		}
-	}
-}
+<p>The configuration consists of three parts</p>
+<ul>
+<li><code>lib-name</code> - the name of the library. This can be different to the rust library name, but native access will
+look for a file with the name <code>lib{lib-name}.so</code> (linux) or <code>lib{lib-name}.dylib</code> (macos) or <code>{lib-name}.dll</code> (windows)
+If you include this in <code>src/main/resources</code> then the library should be packaged automatically when you publish
+the kotlin library. With the appropriate directory structure you can include binaries for multple operating
+systems and architectures.</li>
+<li><code>kotlin.domain</code> - this is the group of the package, e.g. <code>io.apache</code>.</li>
+<li><code>kotlin.use_finalizers_not_cleaners</code> - An optional binary value. By default kotlin uses the Cleaner API from
+Java 9 onwards for cleaning up the native memory alloated by the diplomat library. It can, however, be
+configured to use the finalizer api from Java 8 and prior.</li>
+<li><code>kotlin.scaffold</code> - an optional binary value. If it is set to <code>true</code>, <code>diplomat-tool</code> will scaffold a project
+for you with configuration corresponding to your group and library name.</li>
+</ul>
+<p>Diplomat always create the following structure in the <code>OUTPUT_PATH</code></p>
+<pre><code>├── src 
+│   └── main
+│       └── kotlin
+│           └──{group-tld}
+│               └──{group-name}
+│                   └──{lib-name} 
+│                       ├── GeneratedFile.kt
+│                       ├── ...
+│                       ├── Lib.kt
+│                       ├── ...
 </code></pre>
-<p>And our exported object is then added to <code>RenderInfo</code>s list of render termini, and is evaluated by the renderer accordingly!</p>
-<p>If you <a href="https://rust-diplomat.github.io/diplomat/demo_gen/quickstart.html#getting-started">regenerate the bindings and start the web server</a>, you should see <code>Add a + b, b + c</code> in the list of functions.</p>
+<p>The <code>Lib.kt</code> file includes some utility methods that the library uses, as well as a dedicated cleaner.
+If you choose <code>scaffold</code> then it will also generate a couple of config files</p>
+<pre><code>├── src 
+│   └── ...
+├── build.gradle.kts
+├── setttings.gradle.kts
+</code></pre>
+<h2 id="examples"><a class="header" href="#examples">Examples</a></h2>
+<p>The best way to learn to use the kotlin backend is first understand diplomat generally by reading this <a href="../SUMMARY.html">book</a>.
+Then look at the <code>example</code> and <code>feature_tests</code> directories in the diplomat project. Then you can look at the tests
+for how to use them</p>
+<ul>
+<li>Feature tests: <a href="https://github.com/rust-diplomat/diplomat/tree/main/feature_tests/src/">rust source</a>, <a href="https://github.com/rust-diplomat/diplomat/tree/main/feature_tests/kotlin/somelib/src/test/kotlin/dev/diplomattest/somelib">kotlin usage</a></li>
+<li>Example: <a href="https://github.com/rust-diplomat/diplomat/tree/main/example/src/">rust source</a>, <a href="https://github.com/rust-diplomat/diplomat/tree/main/example/kotlin/somelib/src/test/kotlin/dev/diplomattest/somelib">kotlin usage</a></li>
+</ul>
+<h3 id="callbacks"><a class="header" href="#callbacks">Callbacks</a></h3>
+<p>The kotlin backend supports passing kotlin functions and closures as callbacks to native code. To do this you need to add the
+enable the <code>jvm-callback-support</code> feature when you add  the diplomat runtime to your project. For examples on how to use them
+look in the <code>feature_tests</code> directory of the diplomat project. This is a bit conceptually different to the rest of diplomat
+so here some specific examples</p>
+<ul>
+<li><a href="https://github.com/rust-diplomat/diplomat/blob/main/feature_tests/src/callbacks.rs">rust code</a></li>
+<li><a href="https://github.com/rust-diplomat/diplomat/blob/main/feature_tests/kotlin/somelib/src/main/kotlin/dev/diplomattest/somelib/CallbackWrapper.kt">generated kotlin code</a></li>
+<li><a href="https://github.com/rust-diplomat/diplomat/blob/main/feature_tests/kotlin/somelib/src/test/kotlin/dev/diplomattest/somelib/CallbackWrapperTest.kt">example usage</a></li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../demo_gen/custom_renderer.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../backends/intro.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../backends/intro.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -244,13 +239,10 @@ mod ffi {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../demo_gen/custom_renderer.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../backends/intro.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../backends/intro.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
