--- a/intro.html
+++ b/intro.html
@@ -185,7 +185,7 @@
 </ul>
 </li>
 <li>Dart</li>
-<li>Kotlin (using JNA)</li>
+<li><a href="./backends/kotlin.html">Kotlin (using JNA)</a></li>
 <li>Python via <a href="https://github.com/wjakob/nanobind">Nanobind</a> (maintained by <a href="https://www.zeromatter.com/">Zeromatter</a>)</li>
 </ul>
 <p>There is work in progress for a <a href="https://github.com/rust-diplomat/diplomat/issues/144">Java backend</a> (using Panama). We used to have a .NET backend but it was removed in a refactor, it may get added again.</p>
