--- a/macros.html
+++ b/macros.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Basics - The Diplomat Book</title>
+        <title>Macros - The Diplomat Book</title>
 
 
         <!-- Custom HTML head -->
@@ -175,82 +175,30 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="basics"><a class="header" href="#basics">Basics</a></h1>
-<p>When using Diplomat, you'll need to define Rust modules that contain the Rust APIs you want to expose. You can do this by using the <code>diplomat::bridge</code> macro:</p>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>#[diplomat::bridge]
-mod ffi {
-    pub struct MyFFIStruct {
-        pub a: i32,
-        pub b: bool,
-    }
-    
-    impl MyFFIStruct {
-        pub fn create() -&gt; MyFFIStruct {
-            MyFFIStruct {
-                a: 42,
-                b: true
-            }
-        }
-
-        pub fn do_a_thing(self) {
-            println!("doing thing {:?}", self.b);
-        }
-    }
-}
-<span class="boring">}</span></code></pre></pre>
-<p>This is a simple struct with public fields; which is easier to reason about in an introductory example. <em>Most</em> APIs exposed via Diplomat will be via "opaque types", to be covered in the <a href="./opaque.html">chapter on opaque types</a>.</p>
-<p>Every type declared within a <code>diplomat::bridge</code> module along with all methods in its associated impl will be exposed over FFI. For example, the above code will generate the following extern API:</p>
-<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>#[no_mangle]
-extern "C" fn MyFFIStruct_create() -&gt; MyFFIStruct {
-    MyFFIStruct::create()
-}
-
-#[no_mangle]
-extern "C" fn MyFFIStruct_do_a_thing(this: &amp;MyFFIStruct) {
-    this.do_a_thing()
-}
-<span class="boring">}</span></code></pre></pre>
-<p>We can then generate the bindings for this API using the <code>diplomat-tool</code> CLI.</p>
-<h2 id="c"><a class="header" href="#c">C++</a></h2>
-<p>For example, if we want to generate C++ bindings, we can create a folder `cpp/`` and generate bindings in it by running:</p>
-<pre><code class="language-shell">$ diplomat-tool cpp cpp/
-</code></pre>
-<p>This will generate the following struct in <code>MyFFIStruct.hpp</code>, along with some boilerplate:</p>
-<pre><code class="language-cpp">struct MyFFIStruct {
- public:
-  int32_t a;
-  bool b;
-  static MyFFIStruct create();
-  void do_a_thing();
-};
-</code></pre>
-<p>If we want to generate Sphinx documentation to cpp-docs, we can run with that as an additional parameter:</p>
-<pre><code class="language-shell">$ diplomat-tool cpp cpp/ --docs cpp-docs/
-</code></pre>
-<h2 id="wasm"><a class="header" href="#wasm">WASM</a></h2>
-<p>For WASM JS/TypeScript bindings, you can use the following options, with similarly named directories:</p>
-<pre><code class="language-shell">$ diplomat-tool js js/ --docs js/docs/
-</code></pre>
-<p>This will generate JS that has a <code>MyFFIStruct</code> class, with a static <code>create()</code> method, a <code>do_a_thing()</code> method, and getters for the fields. This JS will require there to be a <code>wasm.mjs</code> file that loads in the built wasm file (See <a href="https://github.com/rust-diplomat/diplomat/issues/80">issue #80</a> for improving this), which you can base off of <a href="https://github.com/rust-diplomat/diplomat/blob/38cffa9bc2ef21d0aba89ed7d76236de4153248a/example/js/wasm.mjs">this file</a>.</p>
-<h2 id="c-1"><a class="header" href="#c-1">C</a></h2>
-<p>While low-level C headers are generated in the process of running <code>diplomat-tool cpp</code>, you can also generate just the C headers with</p>
-<pre><code class="language-shell">$ diplomat-tool c c/
-</code></pre>
-<p>Note that Diplomat's C mode generates direct bindings to the lower level <code>extern "C"</code> API, and is not idiomatic C code. It is recommended that one build a higher level API around the C API (perhaps by writing a plugin) if C bindings are desired.</p>
+                        <h1 id="macros"><a class="header" href="#macros">Macros</a></h1>
+<p>Diplomat has support for generating bindings with macro_rules!, with quite a few caveats:</p>
+<ol>
+<li>Any <code>macro_rules</code> definitions that you wish Diplomat to evaluate must use the <code>#[diplomat::macro_rules]</code> attribute.</li>
+<li>Macros can only contain a single arm. The arm can contain any syntax as defined , with three exceptions:
+<ul>
+<li>The <code>pat</code> and <code>stmt</code> MacroFragSpecs are currently forbidden.</li>
+<li>The <code>$(MacroMatch+) MacroRepSep? MacroRepOp</code> pattern is currently forbidden.</li>
+</ul>
+</li>
+<li>Macros can exist only in <code>#[diplomat::bridge] mod ... { ... }</code> blocks or <code>impl</code> blocks.</li>
+<li>Macros exist solely in the file you've defined them in. They must also be defined first.</li>
+<li>Macros do not use interpolation matchers, nor do they allow recursive usage of other <code>#[diplomat::macro_rules]</code> macros.</li>
+</ol>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="user.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="lifetimes.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="config.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="abi.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -260,11 +208,11 @@ extern "C" fn MyFFIStruct_do_a_thing(this: &amp;MyFFIStruct) {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="user.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="lifetimes.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="config.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="abi.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
